Fixed a:visited CSS
Fixed a:visited CSS so it only applies to the #login-form, it was making visited links white so the were not showing in the result list.

--- a/homer/web/css/style.css
+++ b/homer/web/css/style.css
@@ -75,7 +75,7 @@ body {
   vertical-align: middle;
 }
 
-#login-form a:hover, a:visited {
+#login-form a:hover, #login-form  a:visited {
   color: #fff;
 }
 
